fixed bug with cutout size being too small
The cutout for the input fields wasn't depending on the size of the placeholder text. Changed this so that it calculates the size in pixels of the placeholder. Located this in a helpers file where other similar functions can be placed.

--- a/src/styles/components/_inputField.scss
+++ b/src/styles/components/_inputField.scss
@@ -47,7 +47,7 @@
                 outline: none;
                 border: 1.5px solid $orange;
                 & ~ label {
-                    transform: translate(8px, -18px);
+                    transform: translate(8px, -19px);
                     font-size: 12px;
                 }
                 & ~ div {
